--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,19 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>My LWC App</title>
+        <title>Salesforce B2C Commerce On-Demand Sandboxes Manager</title>
 
         <link
             rel="stylesheet"
-            type="text/css"
-            href="https://cdnjs.cloudflare.com/ajax/libs/design-system/2.11.8/styles/salesforce-lightning-design-system.min.css"
+            href="/resources/slds/styles/salesforce-lightning-design-system.min.css"
         />
-        <style>
-            body {
-                font-family: Arial, Helvetica, sans-serif;
-            }
-        </style>
-        <!-- Block zoom -->
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, maximum-scale=1"
@@ -61,7 +54,7 @@
     <body>
         <noscript>
             <div class="unsupported">
-                <div class="unsupported_title">LWC app can't be loaded!</div>
+                <div class="unsupported_title">App can't be loaded!</div>
                 <div class="unsupported_message">
                     This application requires javascript to work properly.
                 </div>
